--- a/pipeline/configs/default_config.yaml
+++ b/pipeline/configs/default_config.yaml
@@ -4,7 +4,7 @@ predict_data_path: "data/Train_Fractions.csv"
 glycans_data_path: "data/Glycan-Structures-CFG611.txt"
 proteins_data_path: "data/Protein-Sequence-Table.txt"
 glycan_encoder_type: "dummy"
-protein_encoder_type: "dummy"
+protein_encoder_type: "feature"
 binding_predictor_type: "dummy"
 k_folds: 8
 num_epochs: 10
