--- a/pipeline/configs/rdkit_biopy_config.yaml
+++ b/pipeline/configs/rdkit_biopy_config.yaml
@@ -5,7 +5,7 @@ glycans_data_path: "data/Glycan-Structures-CFG611.txt"
 proteins_data_path: "data/Protein-Sequence-Table.txt"
 glycan_encoder_type: "rdkit"
 protein_encoder_type: "biopy"
-binding_predictor_type: "dummy"
+binding_predictor_type: "mean"
 num_epochs: 10
 batch_size: 32
 learning_rate: 0.005
