--- a/pipeline/configs/experiments/esmc_chemberta.yaml
+++ b/pipeline/configs/experiments/esmc_chemberta.yaml
@@ -6,16 +6,19 @@ proteins_data_path: "data/Protein-Sequence-Table.txt"
 glycan_encoder_type: "chemberta"
 protein_encoder_type: "esmc"
 binding_predictor_type: "dnn"
-k_folds: 8
 num_epochs: 10
 batch_size: 32
 learning_rate: 0.001
-checkpoint_frequency: 2
+checkpoint_frequency: 2 # every nth epoch save the model weights (in this example every 2nd epoch so saves at epoch 2, 4, 6, ...)
 train_final_model: False # if want to train and save the model on the best found params from cross val usinmg the entire training set.
+log_predict: True # tranform our target to log(1+target) (log1p()) so that we dont train the model to predict all zeros (reverted on predictions output with expm1())
 random_state: 42
-
+# if not using kfold make sure to specify your val_split (the % of each glycan and protein class to split_mode combine into the validation set)
+use_kfold: False # recomended to not use kfold if using split_mode AND as the splitting % vary greatly
+split_mode: 'AND'
 # optional
-val_split: 0.2
+val_split: 0.5
+k_folds: 3
 device: "cpu"
 model_specific_params: {}
 hf_auth: False
