--- a/pipeline/configs/mean_config.yaml
+++ b/pipeline/configs/mean_config.yaml
@@ -6,6 +6,7 @@ proteins_data_path: "data/Protein-Sequence-Table.txt"
 glycan_encoder_type: "dummy"
 protein_encoder_type: "dummy"
 binding_predictor_type: "mean"
+glycan_type: "SMILES"
 num_epochs: 1
 batch_size: 32
 learning_rate: 0.001
