--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ pipeline/experiments/
 pipeline/experiments_summary.csv
 
 pipeline/data/GlycanML/glycanML_glycan_interactions.tsv
+
+multitask_training/glyML_train_dataset.pkl
+
+multitask_training/glyML_val_dataset.pkl
