--- a/pipeline/configs/default_config.yaml
+++ b/pipeline/configs/default_config.yaml
@@ -3,9 +3,9 @@ output_dir: "experiments"
 predict_data_path: "data/Train_Fractions.csv"
 glycans_data_path: "data/Glycan-Structures-CFG611.txt"
 proteins_data_path: "data/Protein-Sequence-Table.txt"
-glycan_encoder_type: "chemberta"
-protein_encoder_type: "biopy"
-binding_predictor_type: "dnn"
+glycan_encoder_type: "dummy"
+protein_encoder_type: "dummy"
+binding_predictor_type: "dummy"
 num_epochs: 10
 batch_size: 32
 learning_rate: 0.005
