--- a/pipeline/configs/mean_config.yaml
+++ b/pipeline/configs/mean_config.yaml
@@ -7,6 +7,7 @@ glycan_encoder_type: "dummy"
 protein_encoder_type: "dummy"
 binding_predictor_type: "mean"
 glycan_type: "SMILES"
+loss_type: 'mse' # loss types: 'mse', 'rmse', 'rmsle', 'mae', 'log_mae', 'huber', 'smooth_l1' 
 num_epochs: 1
 batch_size: 32
 learning_rate: 0.001
@@ -23,3 +24,5 @@ k_folds: 3
 device: "cpu"
 model_specific_params: {}
 hf_auth: False
+beta: 1.0 # beta val for smooth_l1_loss loss_type
+delta: 1.0 # delta val for huber loss_type
