--- a/pipeline/configs/default_config.yaml
+++ b/pipeline/configs/default_config.yaml
@@ -13,7 +13,7 @@ batch_size: 32
 learning_rate: 0.005
 checkpoint_frequency: 3 # every nth epoch save the model weights (in this example every 3rd epoch so saves at epoch 3, 6, 9, ...)
 train_final_model: False # if want to train and save the model on the best found params from cross val usinmg the entire training set.
-log_predict: False # tranform our target to log(1+target) (log1p()) so that we dont train the model to predict all zeros (reverted on predictions output with expm1())
+log_predict: True # tranform our target to log(1+target) (log1p()) so that we dont train the model to predict all zeros (reverted on predictions output with expm1())
 random_state: 42
 # if not using kfold make sure to specify your val_split (the % of each glycan and protein class to split_mode combine into the validation set)
 use_kfold: False # recomended to not use kfold if using split_mode AND as the splitting % vary greatly
