--- a/pipeline/configs/default_config.yaml
+++ b/pipeline/configs/default_config.yaml
@@ -1,29 +1,25 @@
-# required
-output_dir: "experiments"
-predict_data_path: "data/Train_Fractions.csv"
-glycans_data_path: "data/Glycan-Structures-CFG611.txt"
-proteins_data_path: "data/Protein-Sequence-Table.txt"
-glycan_encoder_type: "dummy"
-protein_encoder_type: "dummy"
-binding_predictor_type: "dummy"
-glycan_type: "SMILES"
-loss_type: 'mse' # loss types: 'mse', 'rmse', 'rmsle', 'mae', 'log_mae', 'huber', 'smooth_l1' 
-num_epochs: 10
 batch_size: 32
-learning_rate: 0.005
-checkpoint_frequency: 3 # every nth epoch save the model weights (in this example every 3rd epoch so saves at epoch 3, 6, 9, ...)
-train_final_model: False # if want to train and save the model on the best found params from cross val usinmg the entire training set.
-log_predict: True # tranform our target to log(1+target) (log1p()) so that we dont train the model to predict all zeros (reverted on predictions output with expm1())
-random_state: 42
-# if not using kfold make sure to specify your val_split (the % of each glycan and protein class to split_mode combine into the validation set)
-use_kfold: False # recomended to not use kfold if using split_mode AND as the splitting % vary greatly
-split_mode: 'AND'
-# optional
-val_split: 0.5
+beta: 1.0
+binding_predictor_type: dummy
+checkpoint_frequency: 3
+delta: 1.0
+device: cpu
+glycan_encoder_type: dummy
+glycan_type: SMILES
+glycans_data_path: data/Glycan-Structures-CFG611.txt
+hf_auth: false
 k_folds: 3
-device: "cpu"
+learning_rate: 0.005
+log_predict: true
+loss_type: mse
 model_specific_params: {}
-hf_auth: False
-beta: 1.0 # beta val for smooth_l1_loss loss_type
-delta: 1.0 # delta val for huber loss_type
-
+num_epochs: 10
+output_dir: experiments
+predict_data_path: data/Train_Fractions.csv
+protein_encoder_type: dummy
+proteins_data_path: data/Protein-Sequence-Table.txt
+random_state: 42
+split_mode: AND
+train_final_model: false
+use_kfold: false
+val_split: 0.5
